--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,9 @@
         </ul>
 
         {% if request.user.is_authenticated %}
-        <h2>Step 2. Find a friend</h2>
-        <a href="./findafriend.html">Find a new friend</a>
+          <h2>Get a Rec</h2>
+          <p><a href="./findafriend.html">Find a new friend</a></p>
+          <p><a href="./findasong.html">Find a new song</a></p>
         {% endif %}
       </div>
 
