--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,17 @@
   <head>
     <title>Concierge</title>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
     <script>
       var accessToken = '{{ user_profile.access_token }}';
     </script>
 
-    <script src="/static/app.js"></script>
+    <script src="/static/js/app.js"></script>
 
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/css/normalize.css" />
+    <link rel="stylesheet" href="/static/css/foundation.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
   </head>
 
   <body>
