--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,18 @@
+
+#header{
+  margin-top:250px;
+}
+
+h1 {
+  font-size:10em;
+  text-align:center;
+}
+
+#facebook-login {
+  width:100px;
+  height:30px;
+}
+
 * {
   font-family: Helvetica, Arial;
 }
