--- a/templates/index.html
+++ b/templates/index.html
@@ -17,33 +17,20 @@
   </head>
 
   <body>
-    <div id="header" class="left">
-      <a id="headerText" class="left" href="/">Concierge</a>
-      <span id="tagline" class="left"> We recommend things</span>
+    <div class="row">
+      <div class="large-10 large-centered columns" id="header"><h1>Concierge</h1></div>
     </div>
-    <div id="contentWrapper">
-      <div id="leftPop" class="login left popOutWithBorder">
-        <h2>Log In</h2>
-        <ul id="auth">
-          {% for service in services %}
-          <li>
-          <a href="/authenticate/{{ service.lower }}">
-            {% if service.lower in profiles %}
-            <span class="check">&#10003;</span>
-            {% endif %}
-            {{ service }}
-          </a>
-          </li>
-          {% endfor %}
-        </ul>
+    <div class="row">
+      <div class="large-7 columns"></div>
+      <div class="large-2 columns"><a href="/authenticate/facebook"><img src="/static/img/fb.png"></a></div>
+    </div>
 
+    <div id="contentWrapper">
         {% if request.user.is_authenticated %}
           <h2>Get a Rec</h2>
           <p><a href="./findafriend.html">Find a new friend</a></p>
           <p><a href="./findasong.html">Find a new song</a></p>
         {% endif %}
-      </div>
-
     </div>
   </body>
 </html>
