restyled rec page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,14 @@
   margin-top:250px;
 }
 
+#rec-wrap {
+  margin-top:180px;
+}
+
+#rec-links{
+  padding-top:200px;
+}
+
 h1 {
   font-size:10em;
   text-align:center;
