Adding the poll to the index.

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
           <h2>Get a Rec</h2>
           <p><a href="./findafriend.html">Find a new friend</a></p>
           <p><a href="./findasong.html">Find a new song</a></p>
+          <p><a href="./pickgotos/">Pick your goto restaurants</a></p>
         {% endif %}
     </div>
   </body>
