--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
           <div class="large-8 columns"><h1>Get a Rec</h1></div>
           <div id="rec-links">
             <div class="large-4 columns"><h3><a href="./findeat.html">Find a new place to eat</a></h3></div>
-            <div class="large-4 columns"><h3><a href="./findasong.html">Find a new song</a></h3></div>
+            <div class="large-4 columns"><h3><a href="./pickgotos/">Pick your goto restaurants</a></h3></div>
           </div>
         </div>
       </div>
