Getting rid of pyc files, changed .gitignore and now adding facebook likes to gotos.

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <div id="rec-wrap">
           <div class="large-8 columns"><h1>Get a Rec</h1></div>
           <div id="rec-links">
-            <div class="large-4 columns"><h3><a href="./findeat.html">Find a new place to eat</a></h3></div>
+            <div class="large-4 columns"><h3><a href="./recRestaurants/">Find a new place to eat</a></h3></div>
             <div class="large-4 columns"><h3><a href="./pickgotos/">Pick your goto restaurants</a></h3></div>
           </div>
         </div>
