--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,10 @@
     {% else %}
       <div class="row">
         <div id="rec-wrap">
-          <div class="large-8 columns"><h1>Get a Rec</h1></div>
+          <div class="large-8 columns"><h1>Concierge</h1></div>
           <div id="rec-links">
             <div class="large-4 columns"><h3><a href="./recRestaurants/">Find a new place to eat</a></h3></div>
-            <div class="large-4 columns"><h3><a href="./pickgotos/">Pick your goto restaurants</a></h3></div>
+            <div class="large-4 columns"><h3><a href="./pickgotos/">Make our suggestions better</a></h3></div>
             <div class="large-4 columns"><h3><a href="./logout/">Logout</a></h3></div>
           </div>
         </div>
