--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,22 @@
       });
     </script>
 
+    <script>
+    function success(position) {
+      document.getElementById("rec").href = "./recRestaurants/" + position.coords.longitude + "/" + position.coords.latitude + "/"
+    }
+    function error(msg) {
+      console.log(msg)
+    }
+      {% if request.user.is_authenticated %}
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(success, error);
+        } else {
+            error('not supported');
+        }
+      {% endif %}
+    </script>
+
     <link rel="stylesheet" href="/static/css/normalize.css" />
     <link rel="stylesheet" href="/static/css/foundation.css" />
     <link rel="stylesheet" href="/static/css/style.css" />
@@ -35,7 +51,7 @@
         <div id="rec-wrap">
           <img class="large-8 columns" src="../static/img/logo.png">
           <div id="rec-links">
-            <div class="large-4 columns"><h3><a href="./recRestaurants/">Find a new place to eat</a></h3></div>
+            <div class="large-4 columns"><h3><a id="rec" href="./recRestaurants/">Find a new place to eat</a></h3></div>
             <div class="large-4 columns"><h3><a href="./pickgotos/">Make our suggestions better</a></h3></div>
             <div class="large-4 columns"><h3><a id="logout" href="https://api.singly.com/logout?access_token={{ user_profile.access_token }}&redirect_uri=http://localhost:8000/logout/">Logout</a></h3></div>
           </div>
